Fix href path for Projects link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <ol class="projects-list">
             <li class="projects-item">
               <span class="project">
-                <a class="project-link" href="https://github.com/Olenka-Hryk"
+                <a class="project-link" href="https://github.com/Olenka-Hryk/figma-landing-page"
                   >https://github.com/Olenka-Hryk
                 </a>
                 ...............
@@ -53,7 +53,7 @@
             </li>
             <li class="projects-item">
               <span class="project">
-                <a class="project-link" href="https://github.com/Olenka-Hryk"
+                <a class="project-link" href="https://github.com/Olenka-Hryk/tasks-board-solutions-js"
                   >https://github.com/Olenka-Hryk
                 </a>
                 ...............
